--- a/src/Registration/Signup.css
+++ b/src/Registration/Signup.css
@@ -281,22 +281,35 @@ body
 
 
 @media screen and (max-width: 740px) {
+	.signup
+	{
+		/* background: linear-gradient(to left, #ee0979, #ff6a00); */
+	}
 	.white_background
 	{
-		/* flex-direction: column-reverse; */
 		flex-wrap: wrap;
+		width: auto;
 		background: linear-gradient(to right, #ee0979, #ff6a00);
 	}
 	.signup_slider
 	{
+		/* width: 100%; */
 		background: linear-gradient(to right, #ee0979, #ff6a00);
 		/* flex-direction: column;
 		flex-wrap: wrap; */
-		/* width: 100%;
-		height: 100%; */
+		width: 100%;
+		height: 100%;
+	}
+	.signup_box
+	{
+		box-shadow: none;
+		/* width: 100%; */
+		border-radius: 0px;
+		background: linear-gradient(to right, #ee0979, #ff6a00);
 	}
 	.signup_card
 	{
+		width: 100%;
 		border-radius: 0px;
 		box-shadow: none;
 		background: linear-gradient(to right, #ee0979, #ff6a00);
@@ -334,10 +347,6 @@ body
 	{
 
 	}
-	.signup_box
-	{
-		box-shadow: none;
-	}
 	.signup_card::before
 	{
 
@@ -350,7 +359,7 @@ body
 	{
 		display: block;
 		background: ;
-		font-size: 1.15em;
+		font-size: 1.1em;
 		position: absolute;
 		bottom: 5%;
 		left: 50%;
@@ -359,6 +368,7 @@ body
 		background: #fff;
 		color: #000;
 		border-radius: 30px;
+		font-weight: bolder;
 		box-shadow: 0px 14px 80px 0px rgba(0, 0, 0, 0.5);
 	}
 	.to_login_res:hover
